@@ -1,5 +1,7 @@
 2006-07-13  Ales Hakl  <ales at hakl dot net>
 
+	* src/threads.c: Mutexes (non-working)
+
 	* src/dfsch.c (dfsch_call_ec): Removed volatile (there is no
 	reason for it to be there, probably)
 	(dfsch_eval_proc_tr): dtto.
